# lssl

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  ast.c  ast.h  ast_ops.c  ast_ops.h  codegen.c  error.c  error.h  file_loc.h  index.css  index.html  index.js  insn.c  insn.h  insn_buf.c  insn_buf.h  js_funcs.c  led_syscalls.c  led_syscalls.h  lexer.h  lexer.l  lssl.c  parser.h  parser.y  test.c  vm.c  vm.h  vm_defs.c  vm_defs.h  vm_runner.c  vm_syscall.c  vm_syscall.h
.github/workflows/: build.yml  pages.yml
demo/: .gitignore  Makefile  index.html
demo/lssl_program/: led_sin  particles
docs/: internals.md  langref.md
example/: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
example/main/: CMakeLists.txt  leds.c  leds.h  main.c  map.html  root.html
idf_bindings/: lssl_idf_web.c  lssl_idf_web.h  web.c
src/: Makefile  ast.c  ast.h  ast_ops.c  ast_ops.h  codegen.c  codegen.h  compile.c  compile.h  error.c  error.h  js_funcs.c  led_map.c  led_map.h  led_syscalls.c  led_syscalls.h  lexer.h  lexer.l  lssl.c  parser.y  test.c  vm.c  vm.h  vm_defs.c  vm_defs.h  vm_syscall.c  vm_syscall.h
tests/: README.md  array_oob_1.lssl  array_oob_2.lssl  basic_sanity.lssl  fn_args.lssl  for_loop.lssl  func_arg_1.lssl  function_call_toomany.lssl  function_call_wrongtype_1.lssl  function_ptr_arg.lssl  if.lssl  led_part.lssl  led_sin.lssl  math_ops.lssl  math_ops_compiletime.lssl  multivar.lssl  nonpod_as_pod_1.lssl  nonpod_as_pod_2.lssl  nonpod_as_pod_3.lssl  nonpod_as_pod_4.lssl  nonpod_as_pod_5.lssl  op_logic_1.lssl  op_logic_2.lssl  op_logic_3.lssl  pass_struct.lssl  prepostadd.lssl  syscall_wrong_2.lssl  syscall_wrong_3.lssl  syscall_wrong_fnptr_1.lssl  syscall_wrong_fnptr_2.lssl  syscall_wrong_fnptr_3.lssl  testcall_function_ptr.lssl  var_defs.lssl
web/: lssl_edit.html  lssl_edit.js  lssl_map.html
